# lttng-tools

./: .gitignore  .vermin  CodingStyle.md  Makefile.am  README.adoc  configure.ac  run-demo.sh
include/lttng/: lttng.h
include/lttng/condition/: buffer-usage-internal.hpp  buffer-usage.h  condition-internal.hpp  event-rule-matches-internal.hpp  session-consumed-size-internal.hpp  session-rotation-internal.hpp
src/common/: Makefile.am  defaults.hpp  event.cpp  exception.hpp  log-level-rule.cpp  mi-lttng-4.1.xsd  mi-lttng.cpp  mi-lttng.hpp  runas.cpp  scheduler.hpp  trigger.cpp
src/common/actions/: increment-map-value.cpp  key-template.cpp  list.cpp  rotate-session.cpp  start-session.cpp  stop-session.cpp
src/common/argpar/: argpar.hpp
src/common/argpar-utils/: argpar-utils.hpp
src/common/conditions/: event-rule-matches.cpp
src/common/config/: trigger-config.cpp
src/common/consumer/: consumer-stream.cpp  consumer.cpp  consumer.hpp  memory-reclaim-timer-task.cpp  pending-memory-reclamation-tracker.cpp  pending-memory-reclamation-tracker.hpp
src/common/event-expr/: event-expr.cpp
src/common/event-rule/: user-tracepoint.cpp
src/common/filter/: filter-ast.hpp  filter-visitor-generate-ir.cpp  filter-visitor-ir-validate-globbing.cpp
src/common/ust-consumer/: ust-consumer.cpp
src/lib/tpp/: Makefile.am
tests/: README.adoc  template_test.py
tests/regression/: Makefile.am
tests/regression/tools/listen/: Makefile.am  test_listen.py  test_listen_cli
tests/unit/: test_scheduler.cpp
tests/utils/: Makefile.am  gdb_helper.py  test_utils.py  utils.sh
(+16 files in other folders)
